Revisions to manuscript and point_by_point response

--- a/docs/write_up/Nature_SciReports/Rev/SpatialMixedFishery.tex
+++ b/docs/write_up/Nature_SciReports/Rev/SpatialMixedFishery.tex
@@ -229,16 +229,34 @@ area (average 2011 - 2015\cite{STECF2017}). Each species was separated into
 juvenile and adult size classes based on their legal minimum conservation
 reference size (Table S2).\\
 
-We analyse the data to understand how the different associations among emergent
-species\added[id=PD]{-groups} (combination of species and size class) and their
-potential drivers affect catch compositions in mixed fisheries. We consider how
-these have changed over time, and the implications for mixed fisheries in
-managing catches of quota species under the EU landing obligation.\\
-
+We analyse the data to understand how the different associations among species
+(combination of species and size class) \replaced[id=PD]{form distinct
+	species-groups with common drivers of spatiotemporal distributions, and
+	how these affect}{ and their potential drivers affect} catch
+compositions \added[id=PD]{for fishers operating} in mixed fisheries. We
+consider how these have changed over time, and the implications for mixed
+fisheries in managing catches of quota species under the EU landing
+obligation.\\
 
 \section*{Results\\}
 
-
+\added[id=PD]{Using our general framework we identify, with relatively few
+	factors from a spatial dynamic factor analysis, that the Celtic Sea
+	demersal fish community can be partitioned into three groups of species
+	(roundfish, flatfish and deeper water species). These species-groups
+	show common trends in spatiotemporal distributions in encounter
+	probability and positive density which can be partitioned into time
+	invariant ("average effect") spatial trends and time variant
+	("spatiotemporal") trends. Time invariant trends may be linked to
+	physical characteristics of the system including depth and predominant
+	substrate type, while time varying spatial trends affect the
+	distribution of species within a group in a similar way. We demonstrate
+	how this information can be used to help spatially separate
+	exploitation of the different groups of species. While more nuances
+	differences in spatiotemporal distributions exist within a group which
+	presents a greater challenge to spatially separate catches, we show how
+	this information may be utilised by mangers and fishers to match catch
+	to quota in highly mixed fisheries.}
 
 \subsection*{Common \deleted[id=PD]{average spatial patterns} driv\replaced{ers
 		for groups of}{ing} species \replaced[id=PD]{determining spatial
@@ -503,7 +521,12 @@ yet the outcome is likely to be much more difficult to predict. For example,
 subtle differences in the distribution of cod, haddock and whiting can be seen
 in Figures 4a-c, showing spatial separation of catches is much more challenging
 and likely to need to be supported by other measures such as changes to the
-selectivity characteristics of gear (e.g.\cite{Santos2016}). \\
+selectivity characteristics of gear\cite{Santos2016}. \added[id=PD]{For example
+	we identified a spatial overlap of flatfish with juvenile roundfish in
+	our species correlations (Figure 3); reducing catches of incidential
+	bycatch on the main target fishing grounds will likely require
+	adaptations to fishing gear to address bycatch without significant
+	economic impacts on the fishery.}\\
 
 A role that science can play in supporting effectiveness of spatiotemporal
 avoidance could be to provide probabilistic advice on hotspots for species
@@ -513,22 +536,24 @@ predictions of high ratios of bycatch species to target species\cite{Ward2015,
 	Cosandey-Godin2015, Breivik2016}, and geostatistical models are well
 suited to this as they incorporate spatial dependency while providing for
 probabilities to be drawn from posterior distributions of the parameter
-estimates.  We posit that such advice could be enhanced by integrating data
-obtained directly from commercial fishing vessels rapidly while modeling
-densities at small time scales (e.g., weekly).  Short-term forecasts of
-distribution could inform fishing choices while also capturing seasonal
-differences in distributions, akin to weather forecasting.  Advice informed by
-a model including a seasonal or real-time component could inform optimal
-policies for time-area closures, move-on rules or even as informal information
-to be utilised by fishers directly without the need for costly continuous data
-collection on environmental parameters, but by using the
-vessels-as-laboratories approach.\\
+estimates. We posit that such advice \added[id=PD]{on "hot spots" as a
+	supportive measure to icentivise avoidance of areas of high bycatch
+	risk} could be enhanced by integrating data obtained directly from
+commercial fishing vessels rapidly while modeling densities at small time
+scales (e.g., weekly).  Short-term forecasts of distribution could inform
+fishing choices while also capturing seasonal differences in distributions,
+akin to weather forecasting.  Advice informed by a model including a seasonal
+or real-time component could inform optimal policies for time-area closures,
+move-on rules or even as informal information to be utilised by fishers
+directly without the need for costly continuous data collection on
+environmental parameters, but by using the "vessels-as-laboratories"
+approach.\\
 
 An important question for the implementation of the EU's landing obligation is
 how far spatial avoidance can go to achieving catch balancing in fisheries.
 Our model captures differences between location fished for two gear types and
 their broad scale effect on catch composition, information crucial for managers
-in implementing the landing obligation.  It is likely, however, that this
+in implementing the landing obligation. It is likely, however, that this
 analysis reflects a lower bound on the utility of spatial avoidance as
 fine-scale behavioural decisions such as time-of-day, gear configuration and
 location choices can also be used to affect catch\cite{Abbott2015,
@@ -537,7 +562,25 @@ elsewhere\cite{Branch2008, Kuriyama2016} suggest limits to the effectiveness of
 spatial avoidance. Differences in ability to change catch composition have also
 been observed for different fleets; in the North Sea targeting ability was
 found to differ between otter and beam trawlers as well as between vessels of
-different sizes\cite{Pascoe2007}.  \\
+different sizes\cite{Pascoe2007}. \\
+
+\added[id=PD]{Further, under the landing obligation the balance of risk-reward
+	for trip level fishing decisions about where to fish may change. For
+	example, are fishers likely to fish in "safe" areas where its known
+	there are lower catches of the target species but also decreased risk
+	of encountering bycatch? How do decisions about level of risk affect
+	likelihood of overshooting available quota and potential profit and
+	losses for individual trips? Set in this context, the model parameter
+	estimates could be used to simulate from a distribution of catches in
+	the fishery at different locations and therefore inform on the
+	possibility of extreme catch events and potential consequences for
+	overshooting quotas. This information may be of interest in identifying
+	optimum strategies, or used in future work to model closure risks for
+	fisheries operating in different locations and conditions given quota
+	constraints. Such analysis on risk and decision making is likely to
+	hinge on micro-level decisions by fishers and such study would be an
+	interesting compliment to broader scale considerations such as those
+	detailed here.} \\
 
 Our framework allows for a quantitative understanding of the broad scale global
 production set available to fishers\cite{Reimer2017} and thus the extent to
@@ -545,15 +588,17 @@ which they can alter catch compositions while operating in a mixed fishery.
 Simulations of spatial effort allocation scenarios based on the production sets
 derived from the model estimates could be used as inputs to fisher behavioural
 models to allow for identification of the lower bounds of optimum spatial
-harvest strategies. This would provide managers with information useful for
-examining trade-offs in quota setting by integrating potential for spatial
-targeting in changing catch composition, thus provide a scientific contribution
-to meeting the goal of maximising catches in mixed fisheries within single
-stock quota constraints\cite{Ulrich2016}. Further, the correlations among
-species could provide information on fisheries at risk of capturing protected,
-endangered or threatened species such as elasmobranches, and allow
-identification of areas where there are high ratios of protected to target
-species.\\
+harvest strategies. \replaced[id=PD]{Modelling of different spatial strategies
+	at the individual or fishery level}{This} would provide managers with
+information useful for examining trade-offs in quota setting by integrating
+potential for spatial targeting in changing catch composition, thus provide a
+scientific contribution to \added[id=PD]{assessing the ability of technical
+	measures for} meeting the goal of maximising catches in mixed fisheries
+within single stock quota constraints\cite{Ulrich2016}. Further, the
+correlations among species could provide information on fisheries at risk of
+capturing protected, endangered or threatened species such as elasmobranches,
+and allow identification of areas where there are high ratios of protected to
+target species.\\
 
 
 Complex environmental, fishery and community drivers of distribution for groups
@@ -804,9 +849,9 @@ possible.  \\
 
 The manuscript benefited from discussions with D. Stokes, C.  Lordan, C. Moore
 and H. Gerritsen (Marine Institute, Ireland), L.  Readdy, C.  Darby, I. Holmes,
-S. Shaw and T. Earl (Cefas). We thank J.Hastie, M.McClure and R. Fonner for
-comments that improved the manuscript and Lisa Readdy for provision of the
-Cefas datasets.
+S. Shaw and T. Earl (Cefas). We thank J.Hastie, M.McClure, R. Fonner and an
+anonymous reviewer for comments that improved the manuscript and Lisa Readdy
+for provision of the Cefas datasets.
 
 \section*{Author contributions}
 P.J.D., C.M and J.T.T. designed the study. P.J.D. conducted the analysis. All
