--- a/docs/write_up/Nature_SciReports/Rev/SpatialMixedFishery.tex
+++ b/docs/write_up/Nature_SciReports/Rev/SpatialMixedFishery.tex
@@ -66,10 +66,10 @@ determine species and size composition.\\
 
 %%	 Two or three sentences explaining what the main result
 In application to the highly mixed fisheries of the Celtic Sea,
-clear common spatial patterns emerge for three distinct species-groups. While
+clear common spatial patterns emerge for three distinct assemblages. While
 distribution varies interannually, the same species are consistently
 found in higher densities together, with more subtle differences within
-species-groups, where spatial separation may not be practically possible.\\
+assemblages, where spatial separation may not be practically possible.\\
 
 %%  general context
 We highlight the importance of dimension reduction techniques to focus
@@ -231,7 +231,7 @@ reference size (Table S2).\\
 
 We analyse the data to understand how the different associations among species
 (combination of species and size class) \replaced[id=PD]{form distinct
-	species-groups with common drivers of spatiotemporal distributions, and
+	assemblages with common drivers of spatiotemporal distributions, and
 	how these affect}{ and their potential drivers affect} catch
 compositions \added[id=PD]{for fishers operating} in mixed fisheries. We
 consider how these have changed over time, and the implications for mixed
@@ -243,7 +243,7 @@ obligation.\\
 \added[id=PD]{Using our general framework we identify, with relatively few
 	factors from a spatial dynamic factor analysis, that the Celtic Sea
 	demersal fish community can be partitioned into three groups of species
-	(roundfish, flatfish and deeper water species). These species-groups
+	(roundfish, flatfish and deeper water species). These assemblages
 	show common trends in spatiotemporal distributions in encounter
 	probability and positive density which can be partitioned into time
 	invariant ("average effect") spatial trends and time variant
@@ -251,8 +251,8 @@ obligation.\\
 	physical characteristics of the system including depth and predominant
 	substrate type, while time varying spatial trends affect the
 	distribution of species within a group in a similar way. We demonstrate
-	how this information can be used to help spatially separate
-	exploitation of the different groups of species. While more nuances
+	how this information can be used to help inform spatial targeting and
+	avoidance of the different groups of species. While more nuanced
 	differences in spatiotemporal distributions exist within a group which
 	presents a greater challenge to spatially separate catches, we show how
 	this information may be utilised by mangers and fishers to match catch
@@ -333,7 +333,7 @@ appropriate spatial resolution, the spatial factor analysis can adequately
 characterise these influences on species spatial dynamics.\\
 
 \subsection*{Time-varying species distributions, but stability within
-	\added[id=PD]{identifiable} species-groups\\} 
+	\added[id=PD]{identifiable} assemblages\\} 
 While there are clear spatial patterns in the factor coefficients describing
 differences in average \deleted[id=PD]{ (over time)} encounter probability and
 positive density (Figure 1), the interannual differences in factor coefficients
@@ -350,13 +350,13 @@ avoid unwanted catch.\\
 \deleted[id=PD]{across all species,} \added[id=PD]{but correlation} among
 species \replaced[id=PD]{showed}{there were} clear relationships
 \added[id=PD]{in species association with spatiotemporal factor coefficients
-	resulting in the formation of three different species-groups} (Figure
+	resulting in the formation of three different assemblages} (Figure
 2).  The same factors appear to drive spatiotemporal \added[id=PD]{(interannual
 	changes in)} distributions of megrim, anglerfish species and hake (the
-deeper water species, \deleted[id=PD]{species-grouping} \added[id=PD]{forming a
-	species-group} negatively associated with the second axes of Figure 2a)
+deeper water species, \deleted[id=PD]{assemblages} \added[id=PD]{forming an
+	assemblage} negatively associated with the second axes of Figure 2)
 and the roundfish and flatfish (\added[id=PD]{two}
-species-groups\deleted[id=PD]{ing} more positively associated with the second
+assemblages\deleted[id=PD]{ing} more positively associated with the second
 axes of Figure 2a). For spatiotemporal positive density (Figure 2b) cod,
 haddock and whiting (the roundfish species) are separated from plaice, sole
 (the flatfish) and deeper water species\added[id=PD]{-group}. As such, it can
@@ -393,7 +393,7 @@ size class with budegassa adults respectively) and hake (-0.33, -0.37) (Figure
 3a) indicating spatial separation in distributions \added[id=PD]{,with the
 	flatfish found more inshore}. This
 \replaced[id=PD]{underscores}{confirms} the associations among species seen in
-the factor loadings, with three distinct species-group assemblages being
+the factor loadings, with three distinct assemblages being
 \replaced[id=PD]{identified}{present}.\\
 
 Correlation coefficients for the average positive density (Figure 3b) show
@@ -448,7 +448,7 @@ driven by temporally changing environmental factors and species behaviour.\\
 
 \subsection*{Subtle differences in distributions may be important to separate
 	catches within groups under the landing obligation:\\} The analysis
-shows the interdependence within \added[id=PD]{three} species-groups of
+shows the interdependence within \added[id=PD]{three} assemblages of
 roundfish, flatfish and deeper water species, where catching one species within
 the group indicates a high probability of catching the other
 species\replaced[id=PD]{. This}{, which} has important implications for how
@@ -458,7 +458,7 @@ catches of species between and within the groups will be key. For example,
 asking where the maximal separation in the densities of two coupled species is
 likely to occur? To address this requirement, we map the difference in spatial
 distribution within a \added[id=PD]{species-}group for each pair of
-species\deleted[id=PD]{ within a species-groupings} for a single year (2015;
+species\deleted[id=PD]{ within an assemblage} for a single year (2015;
 Figure 4). \\
 
 Cod had a more north-westerly distribution than haddock \replaced[id=PD]{and
@@ -502,8 +502,8 @@ area \added[id=PD]{irrespective of the gear deployed}.  \\
 Our study is framed by the problem of addressing the scientific challenges of
 implementing the landing obligation for mixed fisheries. In application to the
 Celtic Sea, we have identified spatial separation of three distinct
-species-groupings (roundfish, flatfish and deeper water species) while showing
-that only subtle differences exist in distributions within species-groups. The
+assemblages (roundfish, flatfish and deeper water species) while showing
+that only subtle differences exist in distributions within assemblages. The
 differences in catch compositions between gears at the same location (Figure
 4h) show that changing fishing methods can go some way to affecting catch, yet
 that differences in catches between locations are likely to be more important.
@@ -603,7 +603,7 @@ target species.\\
 
 Complex environmental, fishery and community drivers of distribution for groups
 of species highlights the scale of the challenge in separating catches within
-the species-groups using spatial management measures. This has important
+the assemblages using spatial management measures. This has important
 implications for management of the mixed fisheries under the EU landings
 obligation. Our analysis identifies where it may be easier to separate catches
 of species (among groups) and where it is more challenging (within groups). We
